programs/2-typecheck/invalid/example/4.9-typecast-numeric.go
// invalid type cast: int is numeric, expr is string
package test

func foo() {
	var x = int("test")
}